[tool.poetry]
name = "item-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
